# Super-Loong

./: .env.example  .gitignore  LICENSE  README.md  REPO-WIKI.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test-api.mjs  信息收集表单.html
services/im-gateway/: .env.example  .gitignore  __init__.py  _adapter_manager_deprecated.py  bridge.py  config_manager.py  gateway_state.py  health_monitor.py  health_policy.py  pyproject.toml  reconnect.py  server.py  structured_logger.py  weclaw-config.json  weclaw_adapter.py
services/im-gateway/adapters/: __init__.py  base.py  dingtalk.py  feishu.py  wecom.py
services/im-gateway/channels/: __init__.py
services/im-gateway/channels/dingtalk/: __init__.py  config.py  gateway.py  outbound.py  plugin.py  status.py
services/im-gateway/channels/feishu/: __init__.py  adapter.py  batching.py  config.py  connection.py  dedup.py  doctor.py  gateway.py  outbound.py  plugin.py  rich_text.py  security.py  status.py  streaming.py
services/im-gateway/channels/wecom/: __init__.py  adapter.py  config.py  connection.py  crypto.py  gateway.py  lifecycle.py  markdown.py  media.py  outbound.py  plugin.py  (+2 more)
services/im-gateway/core/: __init__.py  agent_router.py  attachment_processor.py  config_persistence.py  config_schema.py  contracts.py  dedup.py  http_client.py  message_pipeline.py  registry.py  session_manager.py  token_manager.py  types.py
services/im-gateway/scripts/: setup-weclaw.ps1  setup-weclaw.sh
services/im-gateway/tests/: test_adapter_compliance.py  test_weclaw_adapter.py  test_weclaw_integration.py
(+17 files in other folders)
