[project]
name = "super-agent-im-gateway"
version = "0.1.0"
description = "Super Agent IM Gateway - 桥接 IM 平台到 Super Agent API"
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0",
    "websockets>=13.0",
]

[project.optional-dependencies]
# 各平台适配器的额外依赖 (从 Hermes 继承)
wecom = ["aiohttp>=3.9.0"]
feishu = ["lark-oapi>=1.0.0"]
dingtalk = ["dingtalk-stream>=1.0.0"]
weixin = ["pycryptodome>=3.18.0", "aiohttp>=3.9.0"]
telegram = ["python-telegram-bot[webhooks]>=22.6"]
discord = ["discord.py>=2.0"]
slack = ["slack-sdk>=3.0"]
all = [
    "aiohttp>=3.9.0",
    "lark-oapi>=1.0.0",
    "dingtalk-stream>=1.0.0",
    "pycryptodome>=3.18.0",
    "python-telegram-bot[webhooks]>=22.6",
    "discord.py>=2.0",
    "slack-sdk>=3.0",
]

[tool.setuptools]
packages = ["."]
